feat: strings padrões de botões adicionadas, indentação corrigida nos xmls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PetsUp</string>
+    <string name="login">ENTRAR</string>
+    <string name="signup">CADASTRAR</string>
+    <string name="go_back">Voltar</string>
+    <string name="go_forward">Continuar</string>
+    <string name="confirm">CONFIRMAR</string>
 </resources>
