--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="go_back">Voltar</string>
     <string name="go_forward">Continuar</string>
     <string name="confirm">CONFIRMAR</string>
+    <string name="hidden_password">*******</string>
 </resources>
