feat: tela de listagem de pet shops finalizada. Criado card padrão de pet shop com dados fictícios

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="go_forward">Continuar</string>
     <string name="confirm">CONFIRMAR</string>
     <string name="hidden_password">*******</string>
+    <string name="services">• Banho e Tosa</string>
+    <string name="status_open">• Aberto</string>
+    <string name="status_closed">• Fechado</string>
 </resources>
