feat: tela de seleção de sexo do pet finalizada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="cat">Gato</string>
     <string name="rabbit">Coelho</string>
     <string name="rodent">Roedor</string>
+    <string name="male">Macho</string>
+    <string name="female">Fêmea</string>
 </resources>
