feat: tela de nome do pet finalizada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="rodent">Roedor</string>
     <string name="male">Macho</string>
     <string name="female">Fêmea</string>
+    <string name="name">Nome</string>
 </resources>
