feat: estilo padrão para arrow back adicionado. tela de agendamento concluído com sucesso finalizada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="unfilled_pet">Pet:</string>
     <string name="unfilled_price">Valor:</string>
     <string name="myfavorites">Favoritos</string>
+    <string name="back_to_start">Voltar para o início</string>
 </resources>
