feat: tela de erro ao realizar agendamento finalizada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="unfilled_price">Valor:</string>
     <string name="myfavorites">Favoritos</string>
     <string name="back_to_start">Voltar para o início</string>
+    <string name="retry">TENTAR NOVAMENTE</string>
 </resources>
