--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,8 @@
     <string name="agenda">Agenda</string>
     <string name="home">Início</string>
     <string name="profile">Perfil</string>
+    <string name="edit_profile">Editar perfil</string>
+    <string name="save">Salvar alterações</string>
+    <string name="email">E-mail</string>
+    <string name="password">Senha</string>
 </resources>
