--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <string name="password">Senha</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="success_booking_message">Agendamento realizado com sucesso!</string>
+    <string name="error_booking_message">Ocorreu um erro inesperado. Por favor, tente novamente em alguns instantes.</string>
 </resources>
